# pm1

./: .gitignore  AGENTS.md  CLAUDE.md
.claude/: ralph-loop.local.md
backend/: AGENTS.md  README.md  pyproject.toml
backend/app/: ai.py  ai_router.py  auth.py  board.py  database.py  main.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_ai_chat.py  test_ai_router.py  test_auth.py  test_board.py  test_database.py  test_main.py
docs/: CodeReview.md  DATABASE.md  PLAN.md  Review.md  ToDos.md
frontend/: AGENTS.md  package.json  playwright.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: AISidebar.test.tsx  AISidebar.tsx  AddColumnForm.tsx  ArchivePanel.tsx  BoardSelector.tsx  BoardStats.test.tsx  BoardStats.tsx  ChangePasswordModal.test.tsx  ChangePasswordModal.tsx  FilterBar.test.tsx  FilterBar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  NewCardForm.tsx  PageBackground.tsx  ShortcutsModal.test.tsx  ShortcutsModal.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/src/test/: fixtures.ts  setup.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start_mac.sh  start_windows.ps1  stop_linux.sh  stop_windows.ps1
