[project]
name = "pm-backend"
version = "0.1.0"
description = "Local FastAPI backend for the Project Management MVP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "itsdangerous>=2.2.0",
    "openai>=2.40.0",
    "pytest",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
